# public

./: .gitignore  CMakeLists.txt
experimental/Vulkan/: CMakeLists.txt
experimental/Vulkan/fsvulkanwindow/: memo.txt
experimental/Vulkan/ysglcpp_vulkan/: CMakeLists.txt  ysglbuffermanager_vulkan.cpp  ysglbuffermanager_vulkan.h
src/: CMakeInclude.txt  CMakeLists.txt
src/2DRetroMapTool/: readmee.txt  readmej.txt
src/2DRetroMapTool/memo/: memo.txt
src/2DRetroMapTool/src/: CMakeLists.txt
src/2DRetroMapTool/testdata/: testdata.retromap
src/FM7/: .gitignore  CMakeLists.txt
src/FM7/FM77AVKeyboard/: CMakeLists.txt  clipboard.cpp  clipboard.h  filedialog.cpp  filedialog.h  fm77avautotyping.cpp  fm77avkey.cpp  fm77avkey.h  fm77avkeyboardemu.cpp  fm77avkeyboardemu.h  fm77avkeymap.cpp  fm77avkeymap.h  fm77avrkana.cpp  fm77avrkana.h  gui.h  main.cpp  readmee.txt  readmej.txt
src/FM7/RS232CTest/: CMakeLists.txt  comrecv.cpp  comsend.cpp  comsendrecv.cpp  memo.txt
src/FM7/RomajiToKanaKey/: CMakeLists.txt  main.cpp  readme.txt
src/FM7/autotype/: av40init.bas  installBiosHook.bas  keyboardTest.txt  rs232cTest.bas
src/FM7/util/: CMakeLists.txt  build.py  buildD77.py  empty.D77  makepackage.py  readme.txt  readme_e.txt
src/fsgui3d/src/: CMakeLists.txt  fsgui3d.cpp  fsgui3d.h  fsgui3dicon.cpp  fsgui3dicon.h  fsgui3dutil.cpp  fsgui3dutil.h  fsgui3dviewcontrol.cpp  fsgui3dviewcontrol.h  fsgui3dviewcontroldialog.cpp  fsgui3dviewcontroldialog.h
src/fsgui3d/template/: CMakeLists.txt  fsgui3dapp.cpp  fsgui3dapp.h  singleton.cpp
src/fsgui3d/template-easy/: CMakeLists.txt  fsgui3dmain.cpp  readme.txt
src/fsgui3d/template_with_filedialog/: CMakeLists.txt  filemenu.cpp  fsgui3dapp.cpp  fsgui3dapp.h  fsgui3dmain.cpp
src/fsguilib/filedialog/: CMakeLists.txt  fsguifiledialog.cpp  fsguifiledialog.h  fsguifiledialog_linux.cpp  fsguifiledialog_mac.h  fsguifiledialog_mac_cpp.cpp  fsguifiledialog_mac_objc.m  fsguifiledialog_nodialog.cpp  fsguifiledialog_win.cpp
src/fsguilib/src/: CMakeLists.txt  fsgui.cpp  fsgui.h  fsguibase.cpp  fsguibase.h  fsguibitmaputil.cpp  fsguibitmaputil.h  fsguiboxselection.cpp  fsguiboxselection.h  fsguicallbackconnector.h  fsguicanvas.cpp  fsguicanvas.h  fsguiclipboard.h  fsguicommondrawing.h  fsguidialog.cpp  fsguidialog.h  fsguidialogutil.cpp  fsguidialogutil.h  fsguidraw.cpp  fsguipopupmenu.cpp  fsguipopupmenu.h  fsguirecent.cpp  fsguirecent.h  fsguistatusbar.cpp  fsguistatusbar.h  fsguitimer.h
src/fsguilib/template/: CMakeLists.txt
src/fsguilib/template_with_filedialog/: CMakeLists.txt  filemenu.cpp  fsguiapp.cpp  fsguiapp.h
src/fslazywindow/: readme_for_Android.txt  readme_for_iOS.txt
src/fslazywindow/src/: CMakeLists.txt  fslazywindow.h  fslazywindowcommon.cpp
src/fslazywindow/template/: CMakeLists.txt  main.cpp
src/fssimplefiledialog/memo/: update.txt
src/fssimplefiledialog/sample/: CMakeLists.txt  main.cpp
src/fssimplefiledialog/src/: CMakeLists.txt  fssimplefiledialog.cpp  fssimplefiledialog.h
src/fssimplewindow/samples/: CMakeLists.txt
src/fssimplewindow/src/: CMakeLists.txt  fssimplewindow.h
src/fssimplewindow/template/: CMakeLists.txt  main.cpp
src/imported/: import.txt
src/ir_transceiver/: CMakeLists.txt
src/ir_transceiver/cui_transmitter/: CMakeLists.txt  main.cpp
src/ir_transceiver/gui/: CMakeLists.txt  irdata.cpp  irdata.h  main.cpp
src/ir_transceiver/receiver_schematic/: ir_receiver.kicad_pcb  ir_receiver.sch
src/ir_transceiver/transmitter_schematic/: ir_transmitter.sch
src/opencv/: CMakeLists.txt  memo.txt
src/opencv/arucoMarkerDetection/: CMakeLists.txt  main.cpp
src/opencv/drawMarker/: CMakeLists.txt  main.cpp
src/opencv/videoCapture/: CMakeLists.txt  main.cpp
src/svnrevision/: yssvnheadergenerator.cpp  yssvnrevision.h
src/ysbitmap/cmdtools/: CMakeLists.txt  ys_bitmap_command_base.cpp  yscropbmp.cpp  ysinvertbmp.cpp  ysmakealphamask.cpp  ysmakeblackwhite.cpp  ysmakeblankbmp.cpp  ysmakebmptile.cpp  ysmakedensitymap.cpp  ysmakewhitetransparent.cpp  ysnegatebmp.cpp  yspastebmp.cpp  ysresizebmp.cpp
src/ysbitmap/src/: CMakeLists.txt  ysbitmap.cpp  ysbitmap.h  ysbitmaparray.cpp  ysbitmaparray.h  ysbitmappngif.cpp  ysbitmaptemplate.h  yspng.cpp  yspng.h  yspngenc.cpp  yspngenc.h  yswin32bitmap.cpp  yswin32bitmap.h
src/ysbitmapfont/cmdtools/: CMakeLists.txt  ysmaketextbmp.cpp
src/ysbitmapfont/src/: CMakeLists.txt  auxsample.c  glxsample.c  macosxsample.m  ysglfontbitmaputil.c  ysglfontdata.c  ysglfontdata.h  ysglmaketextbitmap.c  ysglsldrawfontbitmap.c  ysglsldrawfontbitmap.h  ysglusefontbitmap.c
src/ysbitmaputil/src/: CMakeLists.txt  ysbitmapcontour.cpp  ysbitmapcontour.h  ysbitmapdrawing.cpp  ysbitmapdrawing.h  ysbitmaputil.h
src/ysclass/src/: CMakeLists.txt  build32and64.bat  cmp.bat  parallelbuild.bat  parallelbuild_win.txt  parallelrebuild.bat  push.bat  ys2darray.h  ysadvgeometry.cpp  ysadvgeometry.h  ysadvgeometryx.cpp  ysargs.cpp  ysargs.h  ysarray.h  ysarraymask.h  ysavltree.h  ysbase.cpp  ysbase.h  ysbase64.cpp  ysbase64.h  ysbdhandleiterator.h  ysbigint.h  ysbinarytree.h  ysbinarytree2.h  ysclass.h  ysclassmgr.cpp  ysclassmgr.h  ysclip.cpp  ysclip.h  yscommandline.cpp  yscommandline.h  yscomparer.h  yscompilerwarning.h  ysdebug.h  ysdef.h  ysdelaunaytri.cpp  ysdelaunaytri.h  ysdict.h  ysedgeloop.h  yseditarray.h  (+103 more)
src/ysclass11/src/: CMakeLists.txt  ysclass11.h  ysparallelmergesort.h  ysthread11.cpp  ysthread11.h  ysthreadpool.cpp  ysthreadpool.h
src/ysfontrenderer/src/: CMakeLists.txt  ysfixedfontrenderer.cpp  ysfixedfontrenderer.h  ysfontrenderer.cpp  ysfontrenderer.h  yssystemfontrenderer.cpp  yssystemfontrenderer.h
src/ysgebl/: LinuxInstaller.py  readme_English.txt  readme_Japanese.txt
src/ysgebl/src/: making_variant.txt
src/ysgl/src/: CMakeLists.txt  ysgl.h  ysglbitmap.c  ysglbitmap.h  ysgldef.h  ysglheader.h  ysglmath.c  ysglmath.h  ysglsl3ddrawing.c  ysglsl3ddrawing.h  ysglslbitmaprenderer.c  ysglslbitmaprenderer.h  ysglslplain2ddrawing.c  ysglslplain2ddrawing.h  ysglslprogram.c  ysglslprogram.h  (+6 more)
tests/batch/: CMakeLists.txt
tests/interactive/: CMakeLists.txt
(+1128 files in other folders)
