add_subdirectory(ysbitmap/cutout)
add_subdirectory(ysbitmap/pngEncoder)
add_subdirectory(ysbitmap/pngDecoder)

add_subdirectory(ysclass/YsArray)
add_subdirectory(ysclass/YsEditArray)
add_subdirectory(ysclass/YsLattice3d_MakeIntersectingBlockListPolygon)
add_subdirectory(ysclass/YsVec2YsVec3YsAtt3)
add_subdirectory(ysclass/YsRelDir)
add_subdirectory(ysclass/YsStringParser)
add_subdirectory(ysclass/YsSegmentedArray)
add_subdirectory(ysclass/YsKdTreeNearestPoint)
add_subdirectory(ysclass/YsPointFinderLattice3d)
add_subdirectory(ysclass/YsCheckInsidePolygon2)
add_subdirectory(ysclass/YsCheckPolygonSelfIntersection)
add_subdirectory(ysclass/YsMatrix4x4)
add_subdirectory(ysclass/YsMatrix)
add_subdirectory(ysclass/YsSword)
add_subdirectory(ysclass/YsShellCrawler)
add_subdirectory(ysclass/ScreenPolygon)
add_subdirectory(ysclass/DDA)
add_subdirectory(ysclass/YsShell_Boolean)
add_subdirectory(ysclass/YsShell_MetaData)
add_subdirectory(ysclass/YsSplitDegeneratePolygon)
add_subdirectory(ysclass/YsString_Argv)
add_subdirectory(ysclass/YsQuickSort)
add_subdirectory(ysclass/YsQuickSortString)
add_subdirectory(ysclass/YsAVLTree)
add_subdirectory(ysclass/ysarray_and_stdvector)
add_subdirectory(ysclass/YsString)
add_subdirectory(ysclass/YsString_Atoi_Atof)
add_subdirectory(ysclass/YsMergeSort)
add_subdirectory(ysclass/YsTriangulateConvexPolygon)
add_subdirectory(ysclass/YsDelaunayTri)
add_subdirectory(ysclass/YsPositiveVolumeCalculator)
add_subdirectory(ysclass/YsPositiveAreaCalculator)
add_subdirectory(ysclass/YsFindLeastSquarePoint)
add_subdirectory(ysclass/YsCommandLine)

add_subdirectory(ysclass11/YsParallelMergeSort)
add_subdirectory(ysclass11/YsThreadPool)

add_subdirectory(ysgebl/kernel/fileio)
add_subdirectory(ysgebl/kernel/metadata)
add_subdirectory(ysgebl/kernel/search)
add_subdirectory(ysgebl/kernel/fg_ce_attrib)
add_subdirectory(ysgebl/kernelutil/YsShellExt_PatchUtil)
add_subdirectory(ysgebl/kernelutil/YsShellExt_FindNearestPolygon)

add_subdirectory(ysglcpp/arrowUtil)


set(YS_ALL_BATCH_TEST ${YS_ALL_BATCH_TEST} PARENT_SCOPE)
