add_subdirectory("ysgl")
add_subdirectory("yssystemfont/rendering")
add_subdirectory("ysclass/fitcircle")
add_subdirectory("ysclass/YsCheckTriangleIntersection")
add_subdirectory("ysclass/YsDelaunayTriangulation")
add_subdirectory("ysclass/YsDelaunayTriangulation_Star")
add_subdirectory("ysport/ysspecialpath")
add_subdirectory("ysport/ysfileinfo")
add_subdirectory("fssimplefiledialog/single_select")
add_subdirectory("fslazywindow/touch")
