set(TARGET_NAME d77analyze d77fileutil t77dump t77analyze t77save rs232ctfr)

if(MSVC)
	if(CMAKE_SIZEOF_VOID_P EQUAL 8)
		set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:CONSOLE,5.02 /MACHINE:x64")
	else()
		set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:CONSOLE,5.01 /MACHINE:X86")
	endif()
endif()

add_subdirectory(lib)
add_subdirectory(d77)
add_subdirectory(t77)
add_subdirectory(disk2tape)
add_subdirectory(rawReadToD77)
add_subdirectory(rs232cTfr)
add_subdirectory(misc/machinGoToBASIC)
add_subdirectory(misc/srecdump)
add_subdirectory(77AVTyper)
add_subdirectory(D77ToRS232C)
add_subdirectory(T77ToRS232C)
