set(TARGET_NAME "yssystemfont")

if("${CMAKE_SYSTEM_NAME}" STREQUAL "WindowsStore")
	set(SRCS uwp/ysuwpsystemfont.cpp)
	set(LIB_DEPENDENCY ${LIB_DEPENDENCY} ${UWP_WIN2D_TARGETS})
elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "Android")
	set(SRCS android/ysandroidsystemfont.cpp)
	set(LIB_DEPENDENCY ${LIB_DEPENDENCY} log android fslazywindow)
elseif(MSVC)
	set(SRCS windows/yswin32systemfont.cpp)
elseif(APPLE)
	set(SRCS macosx/ysmacosxsystemfont.cpp macosx/ysmacosxsystemfont_objc.m)
elseif(UNIX)
	set(SRCS linux/ysunixsystemfont.cpp)
else()
	set(SRCS null/ysnullsystemfont.cpp)
endif()

add_library(${TARGET_NAME} ${SRCS})
target_link_libraries(${TARGET_NAME} ${LIB_DEPENDENCY})
target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

add_library(ysnullsystemfont null/ysnullsystemfont.cpp)
target_include_directories(ysnullsystemfont PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
