add_subdirectory(test03_shaded3DDrawing)
add_subdirectory(test01_PlainDrawing)
add_subdirectory(test02_flat3DDrawing)
add_subdirectory(test04_transform)
add_subdirectory(test05_bitmap1)
add_subdirectory(test06_bitmap2)
add_subdirectory(test07_flash)
add_subdirectory(test08_billboard)
add_subdirectory(test09_purebillboard)
add_subdirectory(test10_particle)
add_subdirectory(test11_marker)
add_subdirectory(test12_pointSprite)
add_subdirectory(test13_markerByPointSprite)
add_subdirectory(test14_flashByPointSprite)
add_subdirectory(test15_shadowMap)
